--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,9 @@
 !!!
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body!= body
+	head
+		title Ctchme
+		link(rel='stylesheet', href='/stylesheets/style.css')
+		//IF lt IE 9
+			script(src='/javascripts/html5shiv.js')
+		script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
+	body!= body
