--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -60,6 +60,24 @@ body
 	width 1920px
 	height 1200px
 	margin 0 auto 0 auto
+
+a.signup
+	width 150px
+	height 47px
+	background-image url('/images/ctchmesprite.png')
+	background-repeat no-repeat
+	background-position 0 0
+	display block
+	z-index 100
+	margin 25px
+
+a.signup:hover
+	background-position 0 -48px
+
+a.signup:active
+	background-position 0 -94px
+
+
 /*__________________________________________________________ media queries*/
 
 @media only screen and (max-width: 1440px) {}
